@@ -1,5 +1,6 @@
 2005-01-13  Michael Snyder  <msnyder@redhat.com>
 
+	* cli/cli-decode.h: Whitespace tweaks.
 	* wince.c: Whitespace tweaks.
 	* uw-thread.c: Whitespace tweaks.
 	* utils.c: Whitespace tweaks.
